# ai_chat

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  output1.pcm  platformio.ini  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/inmp441/: inmp441.cpp  inmp441.h
components/BSP/max98357/: max98357.cpp  max98357.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  opus_test.cpp  opus_test1.cpp
server/: .env  adpcm.py  audio_analyzer.py  audio_codec.py  audio_player.py  audio_recorder.py  audio_saver.py  baidu_tts_test.py  huoshanyun.py  main.py  main_to_client.py  mic_audio_server.py  opus_internet.py  opus_test.py  opus_user_main.py  pcm_to_wav.py  requirements.txt  speech_service.py  vad_detector.py
server/audio_files/: output.pcm  pcm_to_wav.py
server/llm/: volcengine_client.py  zhipu_client.py
server/tools/: convert_mp3_to_pcm.py
src/: adpcm.cpp  adpcm.h  inmp441.cpp  inmp441.h  main.cpp  max98357.cpp  max98357.h  test_natapp.py
